Add direction sender activity. Update graphics. Add icon. Fix many bugs.

--- a/res/menu/tracker_main.xml
+++ b/res/menu/tracker_main.xml
@@ -40,4 +40,10 @@
         android:title="@string/deleteLogs"
         android:orderInCategory="8"
         android:showAsAction="never" android:enabled="true"/>
+    
+    <item android:id="@+id/action_sender" 
+        android:visible="true" 
+        android:showAsAction="never" 
+        android:titleCondensed="@string/sender" 
+        android:title="@string/sender_long"></item>
 </menu>
