--- a/res/layout/activity_ledconfig.xml
+++ b/res/layout/activity_ledconfig.xml
@@ -264,8 +264,7 @@
 		<Spinner 
 		    android:id="@+id/dir_spinner"
 		    android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-		    android:entries="@array/dir_array"/>
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </LinearLayout>
